--- a/cssBuild.html
+++ b/cssBuild.html
@@ -2,8 +2,12 @@
   <html>
   <head>
     <title>Chocolate Pizza - </title>
-    <link rel="stylesheet" type="text/css" href="cssBuild.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="960.css">
+    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="cssBuild.css">
+    <link rel="stylesheet" type="text/css" href="modules.css">
+
 
     <meta charset="utf-8">
     <link href='http://fonts.googleapis.com/css?family=Yellowtail|Oswald:700' rel='stylesheet' type='text/css'>
@@ -38,7 +42,7 @@
     <img src="images/choco-pizza.png" class="grid_16 alpha spacer">
     <BR>
     <br>
-      <section class="directions">
+      <section>
       <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
       </p>
       <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
